--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> </title>
+    <title>Pho Phimvongsa</title>
     <link rel="stylesheet" href=".assets/css/style.css"/>
 </head>
 
@@ -39,7 +39,7 @@
 
 <section> </section>
 
-<section> 
+<section class="contact"> 
     <div>
 
 
