--- a/home.html
+++ b/home.html
@@ -12,7 +12,6 @@
 <body>
 <header>  
     <!-- <h1>Pho Phimvongsa</h1> -->
-
     <h1>
         <span id="p_f">P</span> 
         <span id="h_f">h</span>
@@ -51,7 +50,6 @@
       <div>
         <p>
             About Me Part
-
         </p>
         <p>
             About Me Part II
@@ -108,7 +106,7 @@
         <address>
           <a href="tel:+8602143760">860.214.3760</a>
           <a href="mailto:podasin@gmail.com">podasin@gmail.com</a>
-          <a href="GitHub.com/LetsGitPhysical">GitHub</a>
+          <a href="https://GitHub.com/LetsGitPhysical">GitHub</a>
         </address>
       </div>
     </section>
