--- a/home.html
+++ b/home.html
@@ -48,11 +48,13 @@
     <section class="page-section" id="about">
       <h2>About Me</h2>
       <div>
-        <p>
-            About Me Part
+        <p> ..Been to alot of places.. Done alot of things.. Can't believe I went looking for a paddleboard picture 
+          of me in Eleuthera for the "Surf Report.." (idiot..).  
         </p>
         <p>
-            About Me Part II
+            Ok, Fine.. There's always room to learn something new and useful.  That's what keeps
+            me going.  And if you're lucky enough to align your passion to make a living then 
+            you'll never work a day in your life. 
         </p>
       </div>
     </section>
