updated the readme to explain the project and wrote a little more from the heart in the about me

--- a/home.html
+++ b/home.html
@@ -48,17 +48,19 @@
     <section class="page-section" id="about">
       <h2>About Me</h2>
       <div>
-        <p> ..Been to alot of places.. Done alot of things.. Can't believe I went looking for a paddleboard picture 
-          of me in Eleuthera for the "Surf Report.." (idiot..).  
+        <p> Well.. Been to alot of places.. Done alot of things.. Can't believe I went looking for a paddleboard picture 
+          of me for the "Surf Report.." (idiot..).    
         </p>
         <p>
-            Ok, Fine.. There's always room to learn something new and useful.  That's what keeps
-            me going.  And if you're lucky enough to align your passion to make a living then 
-            you'll never work a day in your life. 
+            There's always room to learn something new and useful. Having passion in my work is what keeps
+            me going. Picasso had a philosophy I've always thought of more than just words. It's that if you're 
+            lucky enough to make a living with a skill that is your passion then you'll never work a day 
+            in your life. I wanted to have some fun with this project. I hope you find the how mindful I was 
+            with the content quality & aesthestics being showcased. There were many micro adjustments for 
+            everything that dimmed next to everything that brightened. 
         </p>
       </div>
     </section>
-
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
