fixed a typo, but then changed the paragraph to stick more to the point

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
   <!-- banner -->
   <section class="banner">
     <div>
-      <h2>Leave things better than where they started.</h2>
+      <h2>Leave things better than how you found it.</h2>
     </div>
   </section>
 
@@ -52,12 +52,11 @@
           of me for the "Surf Report.." (idiot..).    
         </p>
         <p>
-            There's always room to learn something new and useful. Having passion in my work is what keeps
-            me going. Picasso had a philosophy I've always thought of more than just words. It's that if you're 
-            lucky enough to make a living with a skill that is your passion then you'll never work a day 
-            in your life. I wanted to have some fun with this project. I hope you find the how mindful I was 
-            with the content quality & aesthestics being showcased. There were many micro adjustments for 
-            everything that dimmed next to everything that brightened. 
+            There's always room to learn something new and useful. Having passion in my work is how to 
+            continue to take another step further.  Many important figures have said one form or another of 
+            what Confuscious once said, "Choose a job you love and you'll never work a day in your life." 
+            That's the dream. This was a fun project to work on and laid the foundation to for work I will
+            be doing. I hope you enjoy the content quality & aesthestics being showcased.
         </p>
       </div>
     </section>
